--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -49,6 +49,7 @@
 .entry-content{
 	h1,h2,h3,h4,h5,h6{
 		font-family:@main_font;
+		line-height:1.5em;
 	}
 	h1{
 		font-size:@biggest_font_size;
